# wallet-trading-audit

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: analyze_single_wallet_snapshot.py  analyze_wallet_manifest_portfolio.py  check_env_ready.py  debug_solana_rpc.py  fetch_from_wallet_manifest.py  fetch_raw_wallet_snapshot.py  import_wallet_list.py  inspect_solana_snapshot.py  populate_trusted_solana_swap_valuations.py  prepare_proposed_solana_swap_valuations.py  prepare_trusted_valuations_template.py  run_single_wallet_fetch.py  test_single_wallet.py
src/: config.py
src/analytics/: __init__.py  manifest_portfolio.py  metrics.py  (+8 more)
tests/: test_analyze_single_wallet_snapshot_script.py  test_analyze_wallet_manifest_portfolio_script.py  test_config.py  test_debug_solana_rpc_script.py  test_fifo_engine.py  test_fifo_pipeline.py  test_import_wallet_list_script.py  test_ingestion_clients.py  test_manifest_ingestion.py  test_manifest_portfolio.py  test_metrics.py  test_performance.py  test_populate_trusted_solana_swap_valuations_script.py  test_portfolio.py  test_portfolio_subset_diagnostics.py  test_prepare_proposed_solana_swap_valuations_script.py  test_prepare_trusted_valuations_template_script.py  test_reconciliation.py  test_rules_report.py  test_run_single_wallet_fetch_script.py  test_sample_dataset.py  test_schema.py  test_single_wallet_script.py  test_sol_usd_lookup.py  test_solana_fifo_pipeline.py  test_solana_review.py  test_solana_valuation.py  test_trade_diagnostics.py  test_trade_filter_simulation.py  test_transactions.py  test_wallet_behavior.py
(+62 files in other folders)
