[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wallet-trading-audit"
version = "0.1.0"
description = "Local cross-chain trading analytics scaffold for Solana and BNB EVM wallets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["python-dotenv>=1.0,<2"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ingestion*", "normalize*", "pnl*", "analytics*", "reports*", "valuation*"]
